# Projekt_Software_Engineering_IU

./: .env.backend.example  .env.example  .gitignore  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/data/: demo_data.json
backend/scripts/: generate_demo_data.py  import_data.py
backend/src/: constants.py  driver.py  logger.py  main.py
backend/src/api/: handlers.py  routes.py
backend/src/services/: autocomplete_service.py  import_service.py  query_builder.py
backend/tests/: conftest.py  test_driver.py
backend/tests/integration/: conftest.py  test_data_import_cli_neo4j.py  test_import_integration.py  test_neo4j_integration.py
backend/tests/unit/: test_autocomplete_service.py  test_autocomplete_service_exceptions.py  test_driver.py  test_handlers.py  test_import_service.py  test_main.py  test_query_builder.py
documetation/tests/system_tests/: ST-02.har  ST-03.har
documetation/tests/test_automation/: automated_tests.txt
documetation/uml/activityDiagram/: GP01_UML_Activity.drawio
documetation/uml/classDiagram/: 20251216_UML_CD_FullStack_Overview.drawio  20251218_UML_CD_Backend_Details.drawio  20251218_UML_CD_Frontend_Details.drawio
documetation/uml/sequenzDiagram/: 20251219_UML_SQD_autocomplete.drawio  20251220_UML_SQD_graph_display.drawio
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  ContextMenu.svelte  GraphView.svelte  ReportConfigModal.svelte  ReportGenerator.js  SettingsMenu.svelte  TimelineAnalysis.svelte  api.js  app.css  inputValidation.js  stores.js
frontend/tests/unit/: ReportGenerator.test.js  api.test.js  inputvalidation.test.js  stores.test.js
