[tool.pytest.ini_options]
testpaths = ["tests/unit","tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
log_cli = true
log_cli_level = "INFO"

# Add src to Python path so imports work
pythonpath = ["src", "src/api", "src/services"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-backend"
version = "0.1.0"
description = "Backend API for Neo4j database with Flask"
authors = [{name = "Insanity JoJo"}]
requires-python = ">=3.13"
dependencies = [
    "neo4j>=5.15.0",
    "Flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.14.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0",
]






